[project]
name = "conversableagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag2[browser-use,langchain,openai]>=0.8.3",
    "arxiv>=2.1.3",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.14",
    "nest-asyncio>=1.6.0",
    "playwright>=1.51.0",
    "wikipedia>=1.4.0",
]
